<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_black">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textStyle="bold"
        android:text="@string/calculator"
        android:textAlignment="viewStart"
        android:textColor="@color/label_color"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/textScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:maxLength="22"
        android:text="@string/_0"
        android:textSize="57sp"
        android:layout_below="@+id/title"
        android:background="@color/back_black"
        android:textColor="@color/text_screen_color"
        app:layout_constraintBottom_toTopOf="@id/textResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_below="@+id/title"
        android:background="@color/back_black"
        android:paddingStart="16dp"
        android:textSize="30sp"
        android:gravity="center_vertical"
        android:textColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@id/buttonAC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textScreen" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5">
    </androidx.constraintlayout.widget.Guideline>


    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/topLine"
        android:padding="32dp"
        android:src="@drawable/vector"
        android:background="@null" />

    <Button
        android:id="@+id/button0"
        style="@style/base_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonComma"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/comma"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
        app:layout_constraintStart_toEndOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonEquals"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_2"
        android:text="@string/equals"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonComma"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button1"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/_1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/kostil"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <View
        android:id="@+id/kostil"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@id/kostil"
        app:layout_constraintBottom_toBottomOf="@+id/button0"
        app:layout_constraintEnd_toEndOf="@+id/button0"
        app:layout_constraintStart_toStartOf="@id/button0" />

    <Button
        android:id="@+id/button2"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@id/line"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button3"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/_3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonComma"
        app:layout_constraintEnd_toStartOf="@id/buttonPlus"
        app:layout_constraintStart_toEndOf="@id/line"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/buttonPlus"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_2"
        android:text="@string/plus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEquals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/button4"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/_4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/_5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@id/line"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button6"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/_6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@id/buttonMinus"
        app:layout_constraintStart_toStartOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/buttonMinus"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_2"
        android:text="@string/minus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

    <Button
        android:id="@+id/button7"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/_7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAC" />

    <Button
        android:id="@+id/button8"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/_8"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/line"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlusMinus" />

    <Button
        android:id="@+id/button9"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/_9"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintStart_toStartOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/buttonPercent" />

    <Button
        android:id="@+id/buttonMultiply"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_2"
        android:text="@string/_x"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonAC"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/ac"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlusMinus"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <Button
        android:id="@+id/buttonPlusMinus"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/plus_minus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/line"
        app:layout_constraintStart_toEndOf="@id/buttonAC"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <Button
        android:id="@+id/buttonPercent"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_1"
        android:text="@string/percent"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <Button
        android:id="@+id/buttonDivide"
        style="@style/square_calc_button"
        android:background="@drawable/btn_rounded_corner_2"
        android:text="@string/divide"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonPercent"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <View
        android:id="@+id/topLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlusMinus"
        android:background="@color/color_line"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>